Trying to fix vertical scroll on caroussel with responsive on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -313,4 +313,8 @@ float: right;
     .messageBox {
         height: 40%;
     }
+
+    .card-fontys {
+        overflow-y: scroll; 
+    }
   }
